Agregando scss y css

--- a/evaluacion2/player/sass/_variables.scss
+++ b/evaluacion2/player/sass/_variables.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 $font: 'Poppins', sans-serif;
-$footer: #202530;
-$aside: #282E3D;
-$section: #0E121A;
+$medio: #202530;
+$oscuro: #181C25;
+$negro: #0E121A;
 $azul: #0256FF;
+$gris: #596675;
