--- a/evaluacion2/player/css/general.css
+++ b/evaluacion2/player/css/general.css
@@ -468,7 +468,7 @@ mark,
   content: "— ";
 }
 
-.img-fluid, .reproductor .botones_botones__button-next img, .reproductor .botones_botones__button-play img, .reproductor .botones_botones__button-prev img, .reproductor .cancion img, .destacados__titulo img, .contenido .cabecera .opciones img, .contenido .cabecera .buscador img {
+.img-fluid, .destacados__titulo img {
   max-width: 100%;
   height: auto;
 }
@@ -9925,52 +9925,42 @@ body {
   color: white;
 }
 
-.img-fluid, .reproductor .botones_botones__button-next img, .reproductor .botones_botones__button-play img, .reproductor .botones_botones__button-prev img, .reproductor .cancion img, .destacados__titulo img, .contenido .cabecera .opciones img, .contenido .cabecera .buscador img {
+.img-fluid, .destacados__titulo img {
   max-width: 100%;
   height: auto;
 }
 
-.w25 {
-  flex: 0 0 25%;
-  max-width: 25%;
-  text-align: center;
-}
-
 .lateral {
-  background-color: #282E3D;
-  align-items: margin-left;
+  background-color: #181C25;
+  align-items: flex-end;
   display: inline-flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 100px;
-  width: 350px;
-  height: 500px;
+  width: 300px;
+  height: 600px;
 }
-.lateral_menu {
-  flex: 0 0 10px;
-  max-width: 30px;
-  margin-left: 20px;
-  justify-content: space-between;
-  padding: 50px;
-  flex: auto;
-  height: 5px;
-}
-.lateral_menu_menu-link {
-  flex: 0 0 30px;
-  max-width: 30px;
-  margin-right: 15px;
-}
-.lateral_menu_menu-link img {
-  flex: 0 0 30px;
-  max-width: 30px;
-  align-items: margin-left;
-  justify-content: space-between;
+.lateral__menu {
+  display: grid;
   margin-left: 10px;
-  justify-content: flex-end;
+  justify-content: space-between;
+  text-decoration: none;
+  padding-top: 50px;
+  margin-top: 30px;
 }
-.lateral_menu_menu-link a:link {
+.lateral__menu .lateral__menu-link {
   color: white;
-  text-decoration: underline;
+  text-decoration: none;
+  justify-content: space-between;
+  padding-top: 15px;
+}
+.lateral__menu .lateral__menu-link img {
+  padding-left: 50px;
+  margin-left: 30px;
+  margin-top: -1px;
+  padding: 10px;
+}
+.lateral__menu .more {
+  padding-left: 70px;
 }
 
 .contenido {
@@ -9992,18 +9982,15 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 20px;
+  padding: 15px;
   margin-left: 300px;
-  margin-top: -900px;
+  margin-top: -1100px;
 }
 .contenido .cabecera .buscador img {
-  padding: 20px;
-  margin-left: 20px;
-  align-items: center;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-top: -20px;
+  flex: 0 0 30px;
+  max-width: 20px;
+  margin-right: 30px;
+  margin-top: 15px;
 }
 .contenido .cabecera .buscador img p {
   color: grey;
@@ -10018,92 +10005,115 @@ body {
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 15px;
-  margin-top: -900px;
+  margin-top: -1100px;
 }
+.contenido .cabecera .opciones img {
+  margin-top: -30px;
+}
+
 .titulo {
   align-items: center;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 30px;
-  margin-top: -650px;
-  margin-left: 350px;
+  margin-top: -950px;
+  margin-left: 280px;
   font-size: 40px;
 }
 
 .destacados {
-  flex: 0 0 20%;
   max-width: 40%;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 15px;
-  margin-top: -50px;
+  flex-wrap: wrap;
 }
 .destacados__titulo {
   align-items: center;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  flex: 0 0 30px;
-  max-width: 40%;
-  margin-top: -450px;
-  margin-left: 400px;
+  margin-left: 250px;
+  padding-left: 5px;
+}
+.destacados__titulo h4 {
+  margin-left: 45px;
+  margin-top: -750px;
 }
 .destacados__titulo img {
-  margin-left: 750px;
-  margin-top: -50px;
+  margin-left: 930px;
+  margin-top: -750px;
 }
-.destacados .destacados__lista {
+.destacados__lista {
   flex: 0 0 40%;
   max-width: 40%;
+  margin-left: 250px;
   display: flex;
-  align-items: left;
   justify-content: space-between;
-  margin-top: -50px;
-  margin-right: 100px;
+  margin-top: -330px;
 }
-.destacados .destacados__lista_lista-item {
-  flex: 0 0 30px;
-  max-width: 30px;
-  margin-right: 105px;
+.destacados__lista__lista-item {
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-left: 300px;
+  padding-left: 5px;
 }
-.destacados .destacados__lista img {
+.destacados__lista img {
   margin-left: 50px;
 }
-.destacados .destacados__lista .titulo {
+.destacados__lista .titulo {
+  display: flex;
+  justify-content: space-between;
   font-size: 20px;
-  margin-left: 50px;
+  margin-left: 20px;
   text-align: left;
-  margin-top: 5px;
+  margin-top: -20px;
 }
-.destacados .destacados__lista .artista {
+.destacados__lista .artista {
   font-size: 15px;
-  color: grey;
-  margin-left: 80px;
-  margin-top: -40px;
+  color: #596675;
+  margin-left: 50px;
+  margin-top: -50px;
   text-align: left;
 }
 
 .reproductor {
+  width: 100%;
+  float: right;
+  height: auto;
+  overflow: hidden;
+  position: relative;
+  display: flex;
   background-color: #202530;
-  border-color: white;
-  border: 2px;
-  height: 100px;
+}
+.reproductor .cancion {
+  float: left;
 }
 .reproductor .cancion img {
-  margin: 20px;
+  float: left;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
 }
 .reproductor .cancion .nombre {
-  margin-left: 100px;
-  margin-top: -75px;
+  float: left;
+  width: 10%;
+  padding-left: 15px;
 }
 .reproductor .cancion .nombre h4 {
+  margin-bottom: 2px;
+  margin-top: 18px;
   font-family: "Poppins", sans-serif;
 }
 .reproductor .cancion .nombre p {
-  color: rgba(255, 255, 255, 0.5);
-  margin-top: -10px;
+  font-weight: lighter;
+  color: #596675;
+  float: left;
+  margin-top: -2px;
+  width: -webkit-max-content;
+  width: max-content;
+  font-size: 13px;
 }
 .reproductor .botones {
   flex: 0 0 20%;
@@ -10111,14 +10121,17 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-left: 450px;
-  margin-top: -50px;
+  margin-left: 250px;
+  margin-top: -10px;
 }
-.reproductor .botones_botones__button-play img {
-  border-radius: 20px 20px 20px 20px;
-  position: relative;
-  width: 20vh;
-  height: 20vh;
+.reproductor .botones__button.botones_button-prev {
+  padding-right: 55px;
+}
+.reproductor .botones__button.botones_button-play {
+  padding-right: 55px;
+}
+.reproductor .botones__button.botones_button-next {
+  padding-right: 55px;
 }
 .reproductor .progreso {
   flex: 0 0 20%;
@@ -10126,13 +10139,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-left: 850px;
-  margin-top: -20px;
+  margin-left: 80px;
+  margin-top: -10px;
 }
-.reproductor .progreso_linea {
-  margin: 1px;
-  transform: scale(0);
-  transition: all 0.4s ease-in;
-  color: rgba(255, 255, 255, 0.5);
+.reproductor .progreso .progreso__tiempo {
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 13px;
+}
+.reproductor .progreso .progreso__linea {
+  width: 100px;
+  margin-right: 50px;
+  height: 2px;
+  background-color: white;
+  margin-top: 36px;
 }
 /*# sourceMappingURL=general.css.map */
