--- a/evaluacion2/player/sass/_definitions.scss
+++ b/evaluacion2/player/sass/_definitions.scss
@@ -1,273 +1,264 @@
 body{
-  background-color: $section;
+  background-color: $negro;
   font-family: $font;
   color: white;
 }
 
-.img-fluid {
-    max-width: 100%;
-    height: auto;
-}
-
-.w25 {
-    flex: 0 0 25%;
-    max-width: 25%;
-    text-align: center;
+.img-fluid{
+  max-width: 100%;
+  height: auto;
 }
 
 .lateral{
-  background-color: $aside;
-  align-items: margin-left;
+  background-color: $oscuro;
+  align-items: flex-end;
   display: inline-flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 100px;
-  width: 350px;
-  height: 500px;
+  width: 300px;
+  height: 600px;
 
-  &_menu {
-    flex: 0 0 10px;
-    max-width: 30px;
-    margin-left: 20px;
+  &__menu{
+    display: grid;
+    margin-left:10px;
     justify-content: space-between;
-    padding: 50px;
-    flex: auto;
-    height: 5px;
+    text-decoration: none;
+    padding-top: 50px;
+    margin-top: 30px;
 
-    &_menu-link{
-      flex: 0 0 30px;
-      max-width: 30px;
-      margin-right: 15px;
+  .lateral__menu-link{
+    color: white;
+    text-decoration: none;
+    justify-content: space-between;
+    padding-top: 15px;
 
-      img {
-        flex: 0 0 30px;
-        max-width: 30px;
-        align-items: margin-left;
-        justify-content: space-between;
-        margin-left: 10px;
-        justify-content: flex-end;
-      }
-
-      a:link{
-          color: white;
-          text-decoration: underline;
-      }
-    }
+    img {
+    padding-left: 50px;
+    margin-left: 30px;
+    margin-top: -1px;
+    padding: 10px;
+  }
+}
+  .more{
+    padding-left: 70px;
    }
+  }
 }
 
-  .contenido{
-    align-items: center;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 15px;
-    margin-left: 50px;
+.contenido{
+   align-items: center;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   padding: 15px;
+   margin-left: 50px;
 
-    .cabecera{
-      align-items: center;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      padding: 15px;
+   .cabecera{
+     align-items: center;
+     display: flex;
+     flex-wrap: wrap;
+     justify-content: space-between;
+     padding: 15px;
 
-      .buscador{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        padding: 20px;
-        margin-left: 300px;
-        margin-top: -900px;
-
-        img{
-       @extend .img-fluid;
-          padding: 20px;
-          margin-left: 20px;
-          align-items: center;
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: space-between;
-          margin-top: -20px;
-
-          p{
-           color: grey;
-           font-size: 15px;
-          }
-        }
-      }
-
-        .opciones{
-          flex: 0 0 30%;
-          max-width: 10%;
-          align-items: center;
-          display: flex;
-          margin-left: 1100px;
-          flex-wrap: wrap;
-          justify-content: space-between;
-          padding: 15px;
-          margin-top: -900px;
-
-          img{
-             @extend .img-fluid;
-          }
-        }
-      }
-    }
-
-     .titulo{
-       align-items: center;
+     .buscador{
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
-        padding: 30px;
-        margin-top: -650px;
-        margin-left: 350px;
-        font-size: 40px;
+       padding: 15px;
+       margin-left: 300px;
+       margin-top: -1100px;
+
+       img{
+         flex: 0 0 30px;
+         max-width: 20px;
+         margin-right: 30px;
+         margin-top: 15px;
+         p{
+          color: grey;
+          font-size: 15px;
+         }
+       }
      }
 
-     .destacados{
-       flex: 0 0 20%;
-       max-width: 40%;
-       display: flex;
-       align-items: center;
-       justify-content: space-between;
-       padding: 15px;
-       margin-top: -50px;
+       .opciones{
+         flex: 0 0 30%;
+         max-width: 10%;
+         align-items: center;
+         display: flex;
+         margin-left: 1100px;
+         flex-wrap: wrap;
+         justify-content: space-between;
+         padding: 15px;
+         margin-top: -1100px;
 
-       &__titulo{
+         img{
+          margin-top: -30px;
+         }
+       }
+     }
+   }
+
+     .titulo{
          align-items: center;
          display: flex;
          flex-wrap: wrap;
          justify-content: space-between;
-         flex: 0 0 30px;
-         max-width: 40%;
-         margin-top: -450px;
-         margin-left: 400px;
-         
-         img{
-           @extend .img-fluid;
-           margin-left: 750px;
-           margin-top: -50px;
+         padding: 30px;
+         margin-top: -950px;
+         margin-left: 280px;
+         font-size: 40px;
          }
+
+     .destacados{
+        max-width: 40%;
+        display: flex;
+        flex-wrap: wrap;
+
+     &__titulo{
+        align-items: center;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-left: 250px;
+        padding-left: 5px;
+
+     h4{
+
+        margin-left: 45px;
+        margin-top: -750px;
        }
 
-       .destacados__lista{
-         flex: 0 0 40%;
-         max-width: 40%;
-         display: flex;
-         align-items: left;
-         justify-content: space-between;
-         margin-top: -50px;
-         margin-right: 100px;
+    img{
+       @extend .img-fluid;
+       margin-left: 930px;
+       margin-top: -750px;
+   }
+ }
 
-         &_lista-item{
-           flex: 0 0 30px;
-           max-width: 30px;
-           margin-right: 105px;
-         }
+   &__lista{
+      flex: 0 0 40%;
+      max-width: 40%;
+      margin-left: 250px;
+      display: flex;
+      justify-content: space-between;
+      margin-top: -330px;
 
-         img{
-           margin-left: 50px;
-         }
-         .titulo{
-           font-size: 20px;
-           margin-left: 50px;
-           text-align: left;
-           margin-top: 5px;
-         }
-         .artista{
-           font-size: 15px;
-           color: grey;
-           margin-left: 80px;
-           margin-top: -40px;
-           text-align: left;
-         }
-       }
+   &__lista-item{
+     align-items: center;
+     display: flex;
+     flex-wrap: wrap;
+     justify-content: space-between;
+     margin-left: 300px;
+     padding-left: 5px;
+   }
 
-      }
+   img{
+     margin-left: 50px;
+   }
 
+   .titulo{
+     display: flex;
+     justify-content: space-between;
+     font-size: 20px;
+     margin-left: 20px;
+     text-align: left;
+     margin-top: -20px;
+   }
 
+   .artista{
+     font-size: 15px;
+     color: $gris;
+     margin-left: 50px;
+     margin-top: -50px;
+     text-align: left;
+   }
+ }
+}
 
 .reproductor{
-   background-color: $footer;
-   border-color: white;
-   border: 2px;
-    height: 100px;
+    width: 100%;
+    float: right;
+    height: auto;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    background-color: $medio;
 
-   .cancion{
-     img{
-       @extend .img-fluid;
-       margin: 20px;
-     }
+.cancion{
+   float: left;
 
-     .nombre{
-       margin-left: 100px;
-       margin-top: -75px;
-       h4{
-         font-family: $font;
-       }
+   img{
+    float: left;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    }
 
-       p{
-         color: rgba(white, 0.5);
-         margin-top: -10px;
-       }
-     }
+.nombre{
+    float: left;
+    width: 10%;
+    padding-left: 15px;
+
+   h4{
+    margin-bottom: 2px;
+    margin-top: 18px;
+    font-family: $font;
+  }
+
+   p{
+    font-weight: lighter;
+    color: $gris;
+    float: left;
+    margin-top: -2px;
+    width: max-content;
+    font-size: 13px;
+            }
+        }
+    }
+
+.botones{
+    flex: 0 0 20%;
+    max-width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 250px;
+    margin-top: -10px;
+
+    &__button.botones_button-prev{
+      padding-right: 55px;
    }
 
-   .botones{
-     flex: 0 0 20%;
-     max-width: 20%;
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
-     margin-left: 450px;
-     margin-top: -50px;
+    &__button.botones_button-play{
+      padding-right: 55px;
+    }
 
+    &__button.botones_button-next{
+      padding-right: 55px;
+        }
+    }
 
-     &_botones__button-prev{
-       img{
-         @extend .img-fluid;
-       }
-     }
+.progreso{
+    flex: 0 0 20%;
+    max-width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 80px;
+    margin-top: -10px;
 
-     &_botones__button-play{
-       img{
-         @extend .img-fluid;
-         border-radius: 20px 20px 20px 20px;
-         position: relative;
-         width: 20vh;
-         height: 20vh;
-       }
-     }
+.progreso__tiempo{
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 13px;
+  }
 
-     &_botones__button-next{
-       img{
-         @extend .img-fluid;
-       }
-     }
-   }
-
-   .progreso{
-     flex: 0 0 20%;
-     max-width: 30%;
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
-     margin-left: 850px;
-     margin-top: -20px;
-
-     &__tiempo{
-     }
-
-     &_linea{
-       margin: 1px;
-       transform: scale(0);
-       transition: all 0.4s ease-in;
-       color: rgba(white, 0.5);
-     }
-
-     &__tiempo{
-
-     }
-   }
+.progreso__linea{
+   width: 100px;
+   margin-right: 50px;
+   height: 2px;
+   background-color: white;
+   margin-top: 36px;
+  }
+ }
 }
