Agregando scss y css

--- a/evaluacion2/player/css/general.css
+++ b/evaluacion2/player/css/general.css
@@ -10064,6 +10064,7 @@ body {
 }
 .destacados__lista .titulo {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   font-size: 20px;
   margin-left: 20px;
@@ -10076,6 +10077,7 @@ body {
   margin-left: 50px;
   margin-top: -50px;
   text-align: left;
+  font-weight: lighter;
 }
 
 .reproductor {
@@ -10113,6 +10115,7 @@ body {
   margin-top: -2px;
   width: -webkit-max-content;
   width: max-content;
+  font-weight: lighter;
   font-size: 13px;
 }
 .reproductor .botones {
