--- a/evaluacion2/player/sass/_definitions.scss
+++ b/evaluacion2/player/sass/_definitions.scss
@@ -158,6 +158,7 @@ body{
 
    .titulo{
      display: flex;
+     flex-wrap: wrap;
      justify-content: space-between;
      font-size: 20px;
      margin-left: 20px;
@@ -171,6 +172,7 @@ body{
      margin-left: 50px;
      margin-top: -50px;
      text-align: left;
+     font-weight: lighter;
    }
  }
 }
@@ -211,6 +213,7 @@ body{
     float: left;
     margin-top: -2px;
     width: max-content;
+    font-weight: lighter;
     font-size: 13px;
             }
         }
